--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>My dog</h1>
 
-<p>My first paragraph.</p>
+<p>Tudengikood: 233861 </p>
+
+<tr>
+    <td>January</td>
+    <td>$100</td>
+  </tr>
 
 </body>
 </html>
