--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
 <h1>My dog</h1>
 
 <p>Tudengikood: 233861 </p>
-
-<tr>
+    
+<table>
+  <tr>
+    <th>Month</th>
+    <th>Savings</th>
+  </tr>
+  <tr>
     <td>January</td>
     <td>$100</td>
   </tr>
+  <tr>
+    <td>February</td>
+    <td>$80</td>
+  </tr>
+</table>
 
 </body>
 </html>
