--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 
 <h1>My dog</h1>
 
-<p>Tudengikood: 233861 </p>
-<a href="https://taltech.ee/">TTÜ</a>
 <p>
-    <img src="https://www.dropbox.com/scl/fi/ts0nqyscen1w0s5vjbc0z/20200312_140149.jpg?rlkey=5kg5q8gdjr9kompqd7q724mr8&dl=0"
+    Tudengikood: 233861 
 </p>
+<p>
+ <a href="https://taltech.ee/">TTÜ</a>   
+<p>
+    <img src="https://www.dropbox.com/scl/fi/ts0nqyscen1w0s5vjbc0z/20200312_140149.jpg?rlkey=5kg5q8gdjr9kompqd7q724mr8&dl=0">
+<p>
+    
 <table>
   <tr>
     <th>Month</th>
