--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Tudengikood: 233861 
 </p>
 <p>
- <a href="https://taltech.ee/">TTÜ</a>   
+ <a href="https://taltech.ee/">tallina tehnika ülikool</a>   
 <p>
     <img src="https://www.dropbox.com/scl/fi/ts0nqyscen1w0s5vjbc0z/20200312_140149.jpg?rlkey=5kg5q8gdjr9kompqd7q724mr8&dl=0">
 <p>
