--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>
  <a href="https://taltech.ee/">Tallina Tehnika Ülikool</a>   
 <p>
-    <img src="https://www.dropbox.com/scl/fi/ts0nqyscen1w0s5vjbc0z/20200312_140149.jpg?rlkey=5kg5q8gdjr9kompqd7q724mr8&dl=0">
+    <img src="https://cdn.britannica.com/83/236683-050-84785C8B/Boston-Terrier-dog.jpg">
 <p>
     
 <table>
