--- a/index.html
+++ b/index.html
@@ -10,21 +10,32 @@
 <p>
  <a href="https://taltech.ee/">Tallina Tehnika Ülikool</a>   
 <p>
-    <img src="https://cdn.britannica.com/83/236683-050-84785C8B/Boston-Terrier-dog.jpg">
+    <img src="https://cdn.britannica.com/83/236683-050-84785C8B/Boston-Terrier-dog.jpg" width="500" height="600">
 <p>
     
 <table>
   <tr>
-    <th>Month</th>
-    <th>Savings</th>
+    <th>Dog Info</th>
   </tr>
   <tr>
-    <td>January</td>
-    <td>$100</td>
+    <td>Name:</td>
+    <td>Stifler</td>
   </tr>
   <tr>
-    <td>February</td>
-    <td>$80</td>
+    <td>Breed:</td>
+    <td>Boston Terrier</td>
+  </tr>
+    <tr>
+    <td>Age:</td>
+    <td>7 years</td>
+  </tr>
+    <tr>
+    <td>Favorite hobby:</td>
+    <td>Пlaying with a ball</td>
+  </tr>
+    <tr>
+    <td>Weight:</td>
+    <td>11 kg</td>
   </tr>
 </table>
 
