--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My dog</h1>
+<h1>My Dog</h1>
 
 <table>
   <tr>
@@ -22,16 +22,19 @@
   </tr>
     <tr>
     <td>Favorite hobby:</td>
-    <td>Пlaying with a ball</td>
+    <td>Playing with a ball</td>
   </tr>
     <tr>
     <td>Weight:</td>
     <td>11 kg</td>
   </tr>
 </table>
+
+<h2>А little about Stifler</h2>
+  <h3>Loves to play and walk in the fresh air. Very loyal and friendly with other dog.</h3>
+  
 <p>
-    
-    <img src="https://cdn.britannica.com/83/236683-050-84785C8B/Boston-Terrier-dog.jpg" width="500" height="400">
+    <img src="https://cdn.britannica.com/83/236683-050-84785C8B/Boston-Terrier-dog.jpg" width="600" height="400">
 </p>
 
 <p>
