--- a/index.html
+++ b/index.html
@@ -2,36 +2,33 @@
 <html>
 <body>
 
-<h1>My Dog</h1>
+<h1>My Dog 🐕 </h1>
 
+<b>Dog info</b>
 <table>
   <tr>
-    <th>Dog Info</th>
-  </tr>
-  <tr>
-    <td>Name:</td>
+    <td><font color= "blue">Name:</font></td>
     <td>Stifler</td>
   </tr>
   <tr>
-    <td>Breed:</td>
+    <td><font color= "blue">Breed:</font></td>
     <td>Boston Terrier</td>
   </tr>
     <tr>
-    <td>Age:</td>
+    <td><font color= "blue">Age:</font></td>
     <td>7 years</td>
   </tr>
     <tr>
-    <td>Favorite hobby:</td>
+    <td><font color= "blue">Facorite hobbie:</font></td>
     <td>Playing with a ball</td>
   </tr>
     <tr>
-    <td>Weight:</td>
+    <td><font color= "blue">Weight:</font></td>
     <td>11 kg</td>
   </tr>
 </table>
-
-<h2>А little about Stifler</h2>
-  <h3>Loves to play and walk in the fresh air. Very loyal and friendly with other dog.</h3>
+<h3>А little about Stifler.</h3>
+Loves to play and walk on the fresh air. Very loyal and friendly with other dog.
   
 <p>
     <img src="https://cdn.britannica.com/83/236683-050-84785C8B/Boston-Terrier-dog.jpg" width="600" height="400">
