--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>My Dog 🐕 </h1>
 
-<b>Dog info</b>
+<b>----------Dog info----------</b>
 <table>
   <tr>
     <td><font color= "blue">Name:</font></td>
