--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <body>
 
+<style>
+h1 {text-align: center;}
+h3 {text-align: center;}
+</style>
+
 <h1>My Dog 🐕 </h1>
 
 <b>----------Dog info----------</b>
